<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.drmas.issam.custom.MainActivity">


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/up"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:background="@drawable/anim"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/ShowPopup"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_style"
                android:onClick="ShowPopup"
                android:padding="10dp"
                android:text="@string/show_pup"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonsub"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_style"
                android:padding="10dp"
                android:text="@string/subscribe"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnProfile"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_style"
                android:padding="10dp"
                android:text="@string/profile"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/_36_520"
                android:textColor="@color/orange"
                android:textSize="60sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/clients_subscribed_right_now"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/down"
            android:layout_width="368dp"
            android:layout_height="match_parent"
            android:background="@drawable/downto"
            android:gravity="bottom|end"
            android:orientation="vertical">


        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
